@@ -17,6 +17,7 @@ apt (0.9.8.3) UNRELEASED; urgency=low
   * ensure state-dir exists before coyping cdrom files
   * fix file location for configure-index.gz in apt.conf(5) (Closes: #711921)
   * handle missing "Description" in apt-cache show (Closes: #712435)
+  * try defaults if auto-detection failed in apt-cdrom (Closes: #712433)
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 09 Jun 2013 15:06:24 +0200
 
